# cpp_c_subscribe

./: .gitignore  CMakeLists.txt  Makefile  Readme.md
asm/: Makefile  bridge.asm  bridge_arm.s
src/: APIFunction.cpp  APIFunction.h  C1.cpp  C1.h  CCPPProxy.cpp  CCPPProxy.h  CPUAdapter.h  MemoryUtils.cpp  MemoryUtils.hpp  lib.c  lib.h  main.cpp
test/: CMakeLists.txt  lib.c  lib.h  main.cpp
